<?xml version="1.0"?>
<package>
  <name>fl</name>
  <version>0.0.0</version>
  <description>The filtering_library package</description>

  <maintainer email="jan.issac@gmail.com">Jan Issac</maintainer>

  <license>MPL2.0</license>

  <url type="website">http://github.com/filtering-library</url>

  <author email="jan.issac@gmail.com">Jan Issac</author>
  <author email="manuel.wuthrich@gmail.com">Manuel Wuethrich</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>

  <export>
    <!-- <metapackage/> -->
  </export>
</package>
