<?xml version="1.0"?>
<package>
  <name>fl</name>
  <version>0.1.2</version>
  <description>The filtering_library package</description>

  <maintainer email="jan.issac@gmail.com">Jan Issac</maintainer>

  <license>MIT</license>

  <url type="website">http://github.com/filtering-library</url>

  <author email="jan.issac@gmail.com">Jan Issac</author>
  <author email="manuel.wuthrich@gmail.com">Manuel Wuethrich</author>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <!-- <metapackage/> -->
  </export>
</package>
